Closed Bug 1943736 Opened 1 year ago Closed 1 year ago

Intermittent MOZ_DIAGNOSTIC_ASSERT(aBuffer == mWLBuffer) (Different buffer released?) [@ mozilla::widget::WaylandBuffer::BufferDetachedCallbackHandler] | single tracking bug

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox134 --- unaffected
firefox135 --- unaffected
firefox136 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: stransky)

References

(Regression)

Details

(5 keywords)

Crash Data

Attachments

(1 obsolete file)

Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=491788379&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/MYifTPH8SCSgO4bXO5I8mg/runs/0/artifacts/public/logs/live_backing.log


[task 2025-01-25T07:45:57.087Z] 07:45:57     INFO - TEST-START | toolkit/components/passwordmgr/test/mochitest/test_input_events_for_identical_values.html
[task 2025-01-25T07:45:57.460Z] 07:45:57     INFO - GECKO(15043) | ExceptionHandler::GenerateDump attempting to generate:/tmp/tmpsbxp4qqv.mozrunner/minidumps/47f0c7c4-bfd2-e4f6-54c4-c401a729b119.dmp
[task 2025-01-25T07:45:57.546Z] 07:45:57     INFO - GECKO(15043) | ExceptionHandler::GenerateDump cloned child 15626
[task 2025-01-25T07:45:57.546Z] 07:45:57     INFO - GECKO(15043) | ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2025-01-25T07:45:57.546Z] 07:45:57     INFO - GECKO(15043) | ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2025-01-25T07:45:57.943Z] 07:45:57     INFO - GECKO(15043) | ExceptionHandler::GenerateDump minidump generation succeeded
[task 2025-01-25T07:45:58.016Z] 07:45:58     INFO - GECKO(15043) | Exiting due to channel error.
[task 2025-01-25T07:45:58.042Z] 07:45:58     INFO - GECKO(15043) | Exiting due to channel error.
[task 2025-01-25T07:45:58.042Z] 07:45:58     INFO - GECKO(15043) | Exiting due to channel error.
[task 2025-01-25T07:45:58.042Z] 07:45:58     INFO - GECKO(15043) | Exiting due to channel error.
[task 2025-01-25T07:45:58.042Z] 07:45:58     INFO - GECKO(15043) | Exiting due to channel error.
[task 2025-01-25T07:45:58.042Z] 07:45:58     INFO - GECKO(15043) | Exiting due to channel error.
[task 2025-01-25T07:45:58.082Z] 07:45:58     INFO - TEST-INFO | Main app process: exit 11
[task 2025-01-25T07:45:58.083Z] 07:45:58     INFO - Buffered messages finished
[task 2025-01-25T07:45:58.084Z] 07:45:58     INFO - runtests.py | Application ran for: 0:05:34.552426
[task 2025-01-25T07:45:58.085Z] 07:45:58     INFO - zombiecheck | Reading PID log: /tmp/tmpbd6a8_u9pidlog
[task 2025-01-25T07:45:58.085Z] 07:45:58     INFO - ==> process 15043 launched child process 15113
[task 2025-01-25T07:45:58.088Z] 07:45:58     INFO - zombiecheck | Checking for orphan process with PID: 15113
[task 2025-01-25T07:45:58.090Z] 07:45:58     INFO - mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/B_7V3cogSWGIOYR66oprbA/artifacts/public/build/target.crashreporter-symbols.zip
[task 2025-01-25T07:46:31.992Z] 07:46:31     INFO - mozcrash Copy/paste: /home/ubuntu/tasks/task_173778350507516/fetches/minidump-stackwalk/minidump-stackwalk --symbols-url=https://symbols.mozilla.org/ --cyborg=/tmp/tmpvhl52jkg/47f0c7c4-bfd2-e4f6-54c4-c401a729b119.trace /tmp/tmpsbxp4qqv.mozrunner/minidumps/47f0c7c4-bfd2-e4f6-54c4-c401a729b119.dmp /tmp/tmpgp4l7w0n
[task 2025-01-25T07:46:45.106Z] 07:46:45     INFO - mozcrash Saved minidump as /home/ubuntu/tasks/task_173778350507516/build/blobber_upload_dir/47f0c7c4-bfd2-e4f6-54c4-c401a729b119.dmp
[task 2025-01-25T07:46:45.107Z] 07:46:45     INFO - mozcrash Saved app info as /home/ubuntu/tasks/task_173778350507516/build/blobber_upload_dir/47f0c7c4-bfd2-e4f6-54c4-c401a729b119.extra
[task 2025-01-25T07:46:46.018Z] 07:46:46     INFO - PROCESS-CRASH | MOZ_DIAGNOSTIC_ASSERT(aBuffer == mWLBuffer) (Different buffer released?) [@ mozilla::widget::WaylandBuffer::BufferDetachedCallbackHandler] | toolkit/components/passwordmgr/test/mochitest/test_input_events_for_identical_values.html 
[task 2025-01-25T07:46:46.019Z] 07:46:46     INFO - Process type: main
[task 2025-01-25T07:46:46.020Z] 07:46:46     INFO - Process pid: 15043
[task 2025-01-25T07:46:46.020Z] 07:46:46     INFO - Mozilla crash reason: MOZ_DIAGNOSTIC_ASSERT(aBuffer == mWLBuffer) (Different buffer released?)
[task 2025-01-25T07:46:46.020Z] 07:46:46     INFO - Crash dump filename: /tmp/tmpsbxp4qqv.mozrunner/minidumps/47f0c7c4-bfd2-e4f6-54c4-c401a729b119.dmp
[task 2025-01-25T07:46:46.021Z] 07:46:46     INFO - Operating system: Linux
[task 2025-01-25T07:46:46.021Z] 07:46:46     INFO -                   5.15.0-70-generic #77-Ubuntu SMP Tue Mar 21 14:02:37 UTC 2023
[task 2025-01-25T07:46:46.021Z] 07:46:46     INFO - CPU: amd64
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO -      family 6 model 85 stepping 7
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO -      2 CPUs
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Linux Ubuntu 22.04 - jammy (Ubuntu 22.04.2 LTS)
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - 
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Crash reason:  SIGSEGV / SEGV_MAPERR
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Crash address: 0x0000000000000000
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Crashing instruction: `mov dword [0x0], 0xe0`
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Memory accessed by instruction:
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO -   0. Address: 0x0000000000000000
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO -      Size: 4
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO -      Access type: Write
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - No instruction pointer update by instruction
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Process uptime: not available
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - 
[task 2025-01-25T07:46:46.022Z] 07:46:46     INFO - Linux memory map count: 2360
[task 2025-01-25T07:46:46.023Z] 07:46:46     INFO - 
[task 2025-01-25T07:46:46.023Z] 07:46:46     INFO - Thread 0 firefox-bin (crashed) - tid: 15043
[task 2025-01-25T07:46:46.023Z] 07:46:46     INFO -  0  libxul.so!mozilla::widget::WaylandBuffer::BufferDetachedCallbackHandler(wl_buffer*) [WaylandBuffer.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 224 + 0x0]
[task 2025-01-25T07:46:46.023Z] 07:46:46     INFO -      rax = 0x00007effc0ee62e6    rdx = 0x0000000000000003
[task 2025-01-25T07:46:46.023Z] 07:46:46     INFO -      rcx = 0x0000558a58bbe780    rbx = 0x00007eff930ecd00
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      rsi = 0x0000000000000008    rdi = 0x00007eff930ecd00
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      rbp = 0x00007ffddfd49fb0    rsp = 0x00007ffddfd49f90
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -       r8 = 0x0000000000000000     r9 = 0x00007effcba69194
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      r10 = 0x0000000000000000    r11 = 0x0000000000000282
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      r12 = 0x0000000000000008    r13 = 0x00007ffddfd4a1e0
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      r14 = 0x00007eff930eccf0    r15 = 0x00007eff8dedc740
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      rip = 0x00007effc716b9ce
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -     Found by: given as instruction pointer in context
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -  1  libxul.so!mozilla::widget::BufferDetachedCallbackHandler(void*, wl_buffer*) [WaylandBuffer.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 236 + 0x7]
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      rbx = 0x00007eff930eccf0    rbp = 0x00007ffddfd49fd0
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      rsp = 0x00007ffddfd49fc0    r12 = 0x0000000000000008
[task 2025-01-25T07:46:46.024Z] 07:46:46     INFO -      r13 = 0x00007ffddfd4a1e0    r14 = 0x00007effcabeb340
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      r15 = 0x00007effcabeb110    rip = 0x00007effc7178395
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -     Found by: call frame info
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -  2  libffi.so.8!ffi_call_unix64 + 0x55
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      rbx = 0x00007ffddfd4a130    rbp = 0x00007ffddfd49fe0
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      rsp = 0x00007ffddfd49fe0    r12 = 0x0000000000000008
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      r13 = 0x00007ffddfd4a1e0    r14 = 0x00007effcabeb340
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      r15 = 0x00007effcabeb110    rip = 0x00007effcabe9e2e
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -     Found by: call frame info
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -  3  libffi.so.8!ffi_call_int [ffi64.c : 672 + 0x4]
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a000    rip = 0x00007effcabe6493
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -  4  libwayland-client.so.0 + 0x6acf
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a0d0    rip = 0x00007effcafa3ad0
[task 2025-01-25T07:46:46.025Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.026Z] 07:46:46     INFO -  5  libwayland-client.so.0 + 0xb3af
[task 2025-01-25T07:46:46.026Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a0d8    rip = 0x00007effcafa83b0
[task 2025-01-25T07:46:46.026Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -  6  libffi.so.8!_fini + 0xeab
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a118    rip = 0x00007effcabeb240
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -  7  libffi.so.8!_fini + 0xfab
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a128    rip = 0x00007effcabeb340
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -  8  libffi.so.8!_fini + 0xfab
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a130    rip = 0x00007effcabeb340
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -  9  libffi.so.8!_fini + 0xf4b
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a138    rip = 0x00007effcabeb2e0
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO - 10  firefox-bin!BaseAllocator::malloc(unsigned long) [mozjemalloc.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 5372]
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO -     Found by: inlining
[task 2025-01-25T07:46:46.027Z] 07:46:46     INFO - 11  firefox-bin!MozJemalloc::malloc(unsigned long) [malloc_decls.h:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 51]
[task 2025-01-25T07:46:46.028Z] 07:46:46     INFO -     Found by: inlining
[task 2025-01-25T07:46:46.028Z] 07:46:46     INFO - 12  firefox-bin!PageMalloc(mozilla::Maybe<unsigned long> const&, unsigned long) [PHC.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 1559]
[task 2025-01-25T07:46:46.028Z] 07:46:46     INFO -     Found by: inlining
[task 2025-01-25T07:46:46.029Z] 07:46:46     INFO - 13  firefox-bin!MozJemallocPHC::malloc(unsigned long) [PHC.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 1563 + 0xd9]
[task 2025-01-25T07:46:46.031Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a150    rip = 0x0000558a58b3eba5
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO - 14  libwayland-client.so.0 + 0xf68f
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a178    rip = 0x00007effcafac690
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO - 15  libwayland-client.so.0 + 0xb3af
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a188    rip = 0x00007effcafa83b0
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO - 16  libwayland-client.so.0 + 0x5df1
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a190    rip = 0x00007effcafa2df2
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO - 17  libwayland-client.so.0 + 0x7a5a
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a1d0    rip = 0x00007effcafa4a5b
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.032Z] 07:46:46     INFO - 18  libwayland-client.so.0 + 0xf68f
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a208    rip = 0x00007effcafac690
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO - 19  libwayland-client.so.0 + 0x7242
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a2d0    rip = 0x00007effcafa4243
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO - 20  libwayland-client.so.0 + 0xb3af
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a2e0    rip = 0x00007effcafa83b0
[task 2025-01-25T07:46:46.034Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO - 21  libwayland-client.so.0 + 0x743b
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a330    rip = 0x00007effcafa443c
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO - 22  libgdk-3.so.0 + 0xa097f
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a360    rip = 0x00007effcba65980
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO - 23  libgdk-3.so.0 + 0x9b547
[task 2025-01-25T07:46:46.035Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a370    rip = 0x00007effcba60548
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO - 24  libgdk-3.so.0 + 0x36a98
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a380    rip = 0x00007effcb9fba99
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO - 25  libgdk-3.so.0 + 0xa0995
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a3a0    rip = 0x00007effcba65996
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.036Z] 07:46:46     INFO - 26  libglib-2.0.so.0 + 0x55d3a
[task 2025-01-25T07:46:46.038Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a3b0    rip = 0x00007effcb19ad3b
[task 2025-01-25T07:46:46.038Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.038Z] 07:46:46     INFO - 27  libglib-2.0.so.0 + 0xaa6c7
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a430    rip = 0x00007effcb1ef6c8
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO - 28  libglib-2.0.so.0 + 0x533e2
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a490    rip = 0x00007effcb1983e3
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO - 29  libxul.so!nsAppShell::ProcessNextNativeEvent(bool) [nsAppShell.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 492 + 0xa]
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a4b0    rip = 0x00007effc7185558
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO - 30  libxul.so!nsBaseAppShell::DoProcessNextNativeEvent(bool) [nsBaseAppShell.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 131]
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -     Found by: inlining
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO - 31  libxul.so!nsBaseAppShell::OnProcessNextEvent(nsIThreadInternal*, bool) [nsBaseAppShell.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 250 + 0x28]
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a4c0    rip = 0x00007effc70e08dd
[task 2025-01-25T07:46:46.039Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO - 32  libxul.so!{virtual override thunk({offset(-8)}, nsBaseAppShell::OnProcessNextEvent(nsIThreadInternal*, bool))} [nsBaseAppShell.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 0 + 0xc]
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a520    rip = 0x00007effc70e0abd
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO - 33  libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 1098 + 0xe]
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a530    rip = 0x00007effc3c566ed
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO - 34  libxul.so!std::swap<mozilla::Variant<nsTimerImpl::UnknownCallback, nsCOMPtr<nsITimerCallback>, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback> >(mozilla::Variant<nsTimerImpl::UnknownCallback, nsCOMPtr<nsITimerCallback>, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback>&, mozilla::Variant<nsTimerImpl::UnknownCallback, nsCOMPtr<nsITimerCallback>, nsCOMPtr<nsIObserver>, nsTimerImpl::FuncCallback, nsTimerImpl::ClosureCallback>&) [move.h : 195 + 0x7]
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -      rsp = 0x00007ffddfd4a5b0    rip = 0x00007effc3c61142
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -     Found by: stack scanning
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO - 35  libxul.so!mozilla::OffTheBooksMutex::Unlock() [Mutex.h:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 76]
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -     Found by: inlining
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO - 36  libxul.so!mozilla::StaticMutex::Unlock() [StaticMutex.h:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 45]
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO -     Found by: inlining
[task 2025-01-25T07:46:46.040Z] 07:46:46     INFO - 37  libxul.so!mozilla::detail::BaseAutoLock<mozilla::StaticMutex&>::~BaseAutoLock() [Mutex.h:ef11a9be8e754e9e4121384b26fce3c7803898d0 : 240]
[task 2025-01-25T07:46:46.041Z] 07:46:46     INFO -     Found by: inlining

Looks like Bug 1942232 is a possible regressor

Component: Password Manager → Widget: Gtk
Product: Toolkit → Core

No need that assert if wl_buffer is deleted at BufferDetachedCallbackHandler(). It's enough that WaylandBuffer is still live.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/52438b61a819 [Wayland] Don't assert if wl_buffer is already deleted at BufferDetachedCallbackHandler() r=emilio

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 10 desktop browser crashes on nightly

For more information, please visit BugBot documentation.

Keywords: topcrash
Duplicate of this bug: 1944037

Backed out for causing conflict when I backed out Bug 1942232

Flags: needinfo?(stransky)

Fixed by backout.

Flags: needinfo?(stransky)
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
Attachment #9461865 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: