Bug 1943736 [Wayland] Don't assert if wl_buffer is already deleted at BufferDetachedCallbackHandler() r=emilio

No need that assert if wl_buffer is deleted at BufferDetachedCallbackHandler(). It's enough that WaylandBuffer is still live.

Differential Revision: https://phabricator.services.mozilla.com/D235581